moified code to stop subscriber from covering button

--- a/backend/public/css/stream_call.css
+++ b/backend/public/css/stream_call.css
@@ -11,13 +11,14 @@ body, html {
     margin-right: auto;
 }
 
+
 #subscriber {
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 10;
+    z-index: 1;
 }
 
 #publisher {
@@ -43,6 +44,7 @@ body, html {
     position: relative;
     overflow: hidden;
     margin-bottom: 20px;
+    z-index: 2;
 }
 
   /* Optionally, you can add some hover and active styles to enhance the button interaction */
